--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name":"T.G",
+            "name":"maker-phper",
             "github":"https://github.com/maker-phper/php-SM4-ECB"
         }
     ],
