--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "keywords": ["sm4","ecb","php5.6"],
     "type": "library",
     "require": {
-    	 "php": ">=5.6"
+    	 "php": ">=5.6",
+         "maker-phper/sm4ecb": "dev-master"
     },
     "license": "MIT",
     "authors": [
