--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "keywords": ["sm4","ecb","php5.6"],
     "type": "library",
     "require": {
-    	 "php": ">=5.6",
-         "maker-phper/sm4ecb": "dev-master"
+    	 "php": ">=5.6"
     },
     "license": "MIT",
     "authors": [
